autometrics/tests/compilation/result_labels/fail/wrong_variant.stderr
error: Only "ok" or "error" are accepted as result values
  --> tests/compilation/result_labels/fail/wrong_variant.rs:12:22
   |
12 |     #[label(result = "not ok")]
   |                      ^^^^^^^^
